--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <div id="resto">
                 <h2>Restaurants</h2>
                 <a href="./restaurants/palette-du-gout.html" class="restaurants__div">
+                    <div class="restaurants__nouveau">Nouveau</div>
                     <img class="restaurants__div--img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant palette du gout">
                     <div class="restaurants__div__bottom">
                         <div class="restaurants__div__bottom__txt">
@@ -67,6 +68,7 @@
                     </div>
                 </a>
                 <a href="./restaurants/note-enchantee.html" class="restaurants__div">
+                    <div class="restaurants__nouveau">Nouveau</div>
                     <img class="restaurants__div--img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant palette du gout">
                     <div class="restaurants__div__bottom">
                         <div class="restaurants__div__bottom__txt">
