--- a/index.html
+++ b/index.html
@@ -30,80 +30,88 @@
         </section>
         
         <section class="fonctionnement">
-            <div>
-                <h2>Fonctionnement</h2>
+            <div class="fonctionnement__title"><h2>Fonctionnement</h2></div>
+            <div class="fonctionnement__responsive">
                 <div class="fonctionnement__div">
-                    <div class="fonctionnement__div--id"><p>1</p></div>
+                    <div class="fonctionnement__div__id--1"><p>1</p></div>
                     <img src="./assets/images/icones/mobile-screen-button.svg" alt="icone mobile">
                     <p class="medium-txt">Choisissez un restaurant</p>
                 </div>
                 <div class="fonctionnement__div">
-                    <div class="fonctionnement__div--id"><p>2</p></div>
+                    <div class="fonctionnement__div__id--2"><p>2</p></div>
                     <img src="./assets/images/icones/list-ul.svg" alt="icone liste">
-                    <p class="medium-txt">Choisissez un restaurant</p>
+                    <p class="medium-txt">Composez votre menu</p>
                 </div>
                 <div class="fonctionnement__div">
-                    <div class="fonctionnement__div--id"><p>3</p></div>
+                    <div class="fonctionnement__div__id--3"><p>3</p></div>
                     <img src="./assets/images/icones/store.svg" alt="icone magasin">
-                    <p class="medium-txt">Choisissez un restaurant</p>
+                    <p class="medium-txt">Dégustez au restaurant</p>
                 </div>
             </div>
 
         </section>
 
         <section class="restaurants">
+            <div class="restaurants__title"><h2>Restaurants</h2></div>
             <div id="resto">
-                <h2>Restaurants</h2>
-                <a href="./restaurants/palette-du-gout.html" class="restaurants__div">
-                    <div class="restaurants__nouveau">Nouveau</div>
-                    <img class="restaurants__div--img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant palette du gout">
-                    <div class="restaurants__div__bottom">
-                        <div class="restaurants__div__bottom__txt">
-                            <h4>La palette du goût</h4>
-                            <p class="light-txt">Ménilmontant</p>
+                <div>    
+                    <a href="./restaurants/palette-du-gout.html" class="restaurants__div">
+                        <div class="restaurants__nouveau">Nouveau</div>
+                        <img class="restaurants__div--img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant palette du gout">
+                        <div class="restaurants__div__bottom">
+                            <div class="restaurants__div__bottom__txt">
+                                <h4>La palette du goût</h4>
+                                <p class="light-txt">Ménilmontant</p>
+                            </div>
+                            <div class="restaurants__div__bottom__img">
+                                <img src="./assets/images/icones/like.svg" alt="icone coeur" class="heart-image">
+                            </div>
                         </div>
-                        <div class="restaurants__div__bottom__img">
-                            <img src="./assets/images/icones/like.svg" alt="icone coeur" class="heart-image">
+                    </a>
+                </div>
+                <div>
+                    <a href="./restaurants/note-enchantee.html" class="restaurants__div">
+                        <div class="restaurants__nouveau">Nouveau</div>
+                        <img class="restaurants__div--img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant palette du gout">
+                        <div class="restaurants__div__bottom">
+                            <div class="restaurants__div__bottom__txt">
+                                <h4>La note enchantée</h4>
+                                <p class="light-txt">Charonne</p>
+                            </div>
+                            <div class="restaurants__div__bottom__img">
+                                <img src="./assets/images/icones/like.svg" alt="icone coeur">
+                            </div>
                         </div>
-                    </div>
-                </a>
-                <a href="./restaurants/note-enchantee.html" class="restaurants__div">
-                    <div class="restaurants__nouveau">Nouveau</div>
-                    <img class="restaurants__div--img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant palette du gout">
-                    <div class="restaurants__div__bottom">
-                        <div class="restaurants__div__bottom__txt">
-                            <h4>La note enchantée</h4>
-                            <p class="light-txt">Charonne</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="./restaurants/la-francaise.html" class="restaurants__div">
+                        <img class="restaurants__div--img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant palette du gout">
+                        <div class="restaurants__div__bottom">
+                            <div class="restaurants__div__bottom__txt">
+                                <h4>À la française</h4>
+                                <p class="light-txt">Cité Rouge</p>
+                            </div>
+                            <div class="restaurants__div__bottom__img">
+                                <img src="./assets/images/icones/like.svg" alt="icone coeur">
+                            </div>
                         </div>
-                        <div class="restaurants__div__bottom__img">
-                            <img src="./assets/images/icones/like.svg" alt="icone coeur">
+                    </a>
+                </div>
+                <div>
+                    <a href="./restaurants/delice-des-sens.html" class="restaurants__div">
+                        <img class="restaurants__div--img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant palette du gout">
+                        <div class="restaurants__div__bottom">
+                            <div class="restaurants__div__bottom__txt">
+                                <h4>Le délice des sens</h4>
+                                <p class="light-txt">Folie-Méricourt</p>
+                            </div>
+                            <div class="restaurants__div__bottom__img">
+                                <img src="./assets/images/icones/like.svg" alt="icone coeur">
+                            </div>
                         </div>
-                    </div>
-                </a>
-                <a href="./restaurants/la-francaise.html" class="restaurants__div">
-                    <img class="restaurants__div--img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant palette du gout">
-                    <div class="restaurants__div__bottom">
-                        <div class="restaurants__div__bottom__txt">
-                            <h4>À la française</h4>
-                            <p class="light-txt">Cité Rouge</p>
-                        </div>
-                        <div class="restaurants__div__bottom__img">
-                            <img src="./assets/images/icones/like.svg" alt="icone coeur">
-                        </div>
-                    </div>
-                </a>
-                <a href="./restaurants/delice-des-sens.html" class="restaurants__div">
-                    <img class="restaurants__div--img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant palette du gout">
-                    <div class="restaurants__div__bottom">
-                        <div class="restaurants__div__bottom__txt">
-                            <h4>Le délice des sens</h4>
-                            <p class="light-txt">Folie-Méricourt</p>
-                        </div>
-                        <div class="restaurants__div__bottom__img">
-                            <img src="./assets/images/icones/like.svg" alt="icone coeur">
-                        </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
             </div>
 
         </section>
