Responvi restaurant et premières animations -

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="./assets/style/components/footer.css">
+    <script src="https://kit.fontawesome.com/ab2543bdac.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -63,11 +64,11 @@
                                 <h4>La palette du goût</h4>
                                 <p class="light-txt">Ménilmontant</p>
                             </div>
-                            <div class="restaurants__div__bottom__img">
-                                <img src="./assets/images/icones/like.svg" alt="icone coeur" class="heart-image">
-                            </div>
                         </div>
                     </a>
+                    <div class="restaurants__div__bottom__img">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
                 <div>
                     <a href="./restaurants/note-enchantee.html" class="restaurants__div">
@@ -78,11 +79,11 @@
                                 <h4>La note enchantée</h4>
                                 <p class="light-txt">Charonne</p>
                             </div>
-                            <div class="restaurants__div__bottom__img">
-                                <img src="./assets/images/icones/like.svg" alt="icone coeur">
-                            </div>
                         </div>
                     </a>
+                    <div class="restaurants__div__bottom__img">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
                 <div>
                     <a href="./restaurants/la-francaise.html" class="restaurants__div">
@@ -92,11 +93,11 @@
                                 <h4>À la française</h4>
                                 <p class="light-txt">Cité Rouge</p>
                             </div>
-                            <div class="restaurants__div__bottom__img">
-                                <img src="./assets/images/icones/like.svg" alt="icone coeur">
-                            </div>
                         </div>
                     </a>
+                    <div class="restaurants__div__bottom__img">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
                 <div>
                     <a href="./restaurants/delice-des-sens.html" class="restaurants__div">
@@ -106,12 +107,13 @@
                                 <h4>Le délice des sens</h4>
                                 <p class="light-txt">Folie-Méricourt</p>
                             </div>
-                            <div class="restaurants__div__bottom__img">
-                                <img src="./assets/images/icones/like.svg" alt="icone coeur">
-                            </div>
                         </div>
                     </a>
+                    <div class="restaurants__div__bottom__img">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
+                
             </div>
 
         </section>
