--- a/restaurants/delice-des-sens.html
+++ b/restaurants/delice-des-sens.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../assets/style/restaurants.css">
     <link rel="stylesheet" href="../assets/style/components/footer.css">
+    <script src="https://kit.fontawesome.com/ab2543bdac.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
             <div class="section__menu--padding">
                 <div class="section__menu__title">
                     <div>Le délice des sens</div>
-                    <img src="../assets/images/icones/like.svg" alt="coeur">
+                    <i class="fa-solid fa-heart"></i>
                 </div>
                 <div class="section__menu__entree">
                     <div class="section__menu__title__plat">Entrées</div>
