--- a/restaurants/palette-du-gout.html
+++ b/restaurants/palette-du-gout.html
@@ -10,8 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="../assets/style/restaurants.css">
     <link rel="stylesheet" href="../assets/style/components/footer.css">
-</head>
-
+    <script src="https://kit.fontawesome.com/ab2543bdac.js" crossorigin="anonymous"></script>
 <body>
     <header>
         <a href="../index.html">
@@ -29,7 +28,7 @@
             <div class="section__menu--padding">
                 <div class="section__menu__title">
                     <div>La palette du goût</div>
-                    <img src="../assets/images/icones/like.svg" alt="coeur">
+                    <i class="fa-solid fa-heart"></i>
                 </div>
                 <div class="section__menu__entree">
                     <div class="section__menu__title__plat">Entrées</div>
