--- a/restaurants/delice-des-sens.html
+++ b/restaurants/delice-des-sens.html
@@ -30,7 +30,7 @@
             <div class="section__menu--padding">
                 <div class="section__menu__title">
                     <div>Le délice des sens</div>
-                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-heart like"></i>
                 </div>
                 <div class="section__menu__entree">
                     <div class="section__menu__title__plat">Entrées</div>
@@ -41,6 +41,9 @@
                             <div class="section__menu__box__txt">Assaisonné au yuzu</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">25€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -48,6 +51,9 @@
                             <div class="section__menu__box__txt">Et sa farandole de petits légumes</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">35€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -55,6 +61,9 @@
                             <div class="section__menu__box__txt">Aux truffes</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">20€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="section__menu__plat">
@@ -66,6 +75,9 @@
                             <div class="section__menu__box__txt">Et sa crème de truffe</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">40€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -73,6 +85,9 @@
                             <div class="section__menu__box__txt">Et ses légumes de saison</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">35€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -80,6 +95,9 @@
                             <div class="section__menu__box__txt">Et sa purée de panais</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">44€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="section__menu__dessert">
@@ -91,6 +109,9 @@
                             <div class="section__menu__box__txt">Du chef</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">18€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -98,6 +119,9 @@
                             <div class="section__menu__box__txt">Revisitée</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">22€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -105,6 +129,9 @@
                             <div class="section__menu__box__txt">À la noisette</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">23€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="btn__div"><a href="" class="btn">Commander</a></div>
@@ -124,7 +151,7 @@
                     <a href="">Devenir partenaire</a>
                 </div>
                 <a href="">Mentions légales</a>
-                <a href="">Contact</a>
+                <a href="mailto:ohmyfood@gmail.com">Contact</a>
             </div>
         </div>
     </footer>
