--- a/restaurants/note-enchantee.html
+++ b/restaurants/note-enchantee.html
@@ -30,7 +30,7 @@
             <div class="section__menu--padding">
                 <div class="section__menu__title">
                     <div>La note enchantée</div>
-                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-heart like"></i>
                 </div>
                 <div class="section__menu__entree">
                     <div class="section__menu__title__plat">Entrées</div>
@@ -40,28 +40,48 @@
                             <div class="section__menu__box__title">Ravioles de foie gras</div>
                             <div class="section__menu__box__txt">Accompagnées de leur crème à la truffe</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">25€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">25€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
                             <div class="section__menu__box__title">Caviar osciètre</div>
                             <div class="section__menu__box__txt">Sur blini à la farine de blé noir</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">35€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">35€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
                             <div class="section__menu__box__title">Homard et espuma de potiron</div>
                             <div class="section__menu__box__txt">Marinés aux zestes d'orange</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">20€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">20€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
                             <div class="section__menu__box__title">Foie gras de canard cuit entier</div>
                             <div class="section__menu__box__txt">Confiture de figue et pain toasté</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">35€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">35€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="section__menu__plat">
@@ -72,21 +92,36 @@
                             <div class="section__menu__box__title">Noix de coquilles Saint-Jacques</div>
                             <div class="section__menu__box__txt">Sur lit de purée de céleri-rave</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">40€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">40€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
                             <div class="section__menu__box__title">Langoustine poêlée</div>
                             <div class="section__menu__box__txt">Purée de patate douce</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">35€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">35€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
                             <div class="section__menu__box__title">Mijoté de queue de bœuf</div>
                             <div class="section__menu__box__txt">Et riz sauvage aux zestes de citron</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">44€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">44€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="section__menu__dessert">
@@ -97,21 +132,36 @@
                             <div class="section__menu__box__title">Macaron noisette et chocolat</div>
                             <div class="section__menu__box__txt">Glace au caramel brun et sel de Guérande</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">18€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">18€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
                             <div class="section__menu__box__title">Baba au rhum revisité</div>
                             <div class="section__menu__box__txt">Avec son coulis de citron</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">22€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">22€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
                             <div class="section__menu__box__title">Tarte au citron meringuée</div>
                             <div class="section__menu__box__txt">Déstructurée</div>
                         </div>
-                        <div class="section__menu__box__price--align"><div class="section__menu__box__price">23€</div></div>
+                        <div class="section__menu__box__price--align">
+                            <div class="section__menu__box__price">23€</div>
+                        </div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="btn__div"><a href="" class="btn">Commander</a></div>
@@ -131,7 +181,7 @@
                     <a href="">Devenir partenaire</a>
                 </div>
                 <a href="">Mentions légales</a>
-                <a href="">Contact</a>
+                <a href="mailto:ohmyfood@gmail.com">Contact</a>
             </div>
         </div>
     </footer>
