--- a/restaurants/palette-du-gout.html
+++ b/restaurants/palette-du-gout.html
@@ -28,7 +28,7 @@
             <div class="section__menu--padding">
                 <div class="section__menu__title">
                     <div>La palette du goût</div>
-                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-heart like"></i>
                 </div>
                 <div class="section__menu__entree">
                     <div class="section__menu__title__plat">Entrées</div>
@@ -39,6 +39,9 @@
                             <div class="section__menu__box__txt">Au piment d'Espelette</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">25€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -46,6 +49,9 @@
                             <div class="section__menu__box__txt">Et ses copeaux de truffe noire</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">35€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -53,6 +59,9 @@
                             <div class="section__menu__box__txt">Assaisonné à la truffe sur lit de caviar</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">20€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="section__menu__plat">
@@ -64,6 +73,9 @@
                             <div class="section__menu__box__txt">Accompagné de sa ribambelle de légumes</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">40€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -71,6 +83,9 @@
                             <div class="section__menu__box__txt">À la truffe noire sur sa purée de panais</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">35€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -78,6 +93,9 @@
                             <div class="section__menu__box__txt">Aux agrumes</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">44€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="section__menu__dessert">
@@ -89,6 +107,9 @@
                             <div class="section__menu__box__txt">Revisité</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">18€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -96,6 +117,9 @@
                             <div class="section__menu__box__txt">Et glace à la vanille de Madagascar</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">22€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                     <div class="section__menu__box">
                         <div>
@@ -103,6 +127,9 @@
                             <div class="section__menu__box__txt">Au piment d'Espelette et à la truffe noire</div>
                         </div>
                         <div class="section__menu__box__price--align"><div class="section__menu__box__price">23€</div></div>
+                        <div class="valid">
+                            <div class="valid__rond"><i class="fa-solid fa-check"></i></div>
+                        </div>
                     </div>
                 </div>
                 <div class="btn__div"><a href="" class="btn">Commander</a></div>
@@ -122,7 +149,7 @@
                     <a href="">Devenir partenaire</a>
                 </div>
                 <a href="">Mentions légales</a>
-                <a href="">Contact</a>
+                <a href="mailto:ohmyfood@gmail.com">Contact</a>
             </div>
         </div>
     </footer>
